# intelli-deck-addon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup_symlink.sh
src/intelli_deck_addon/: __init__.py  config.json  config.yml  main.py  manifest.json  meta.json  requirements.txt
src/intelli_deck_addon/utils/: anki_utils.py  config_utils.py  example_generator.py
